# Diffusion_HASH_inverse

./: .gitignore  .python-version  README.md  pyproject.toml  random_n_bits.py  requirements.txt  sha_256.py  sitecustomize.py
Docs/: output_format.json
data/character/: random_1024_char.char  random_256_char.char  random_440_char.char  random_512_char.char  random_8_char.char
generator/: random_n_bits.py  random_n_char.py
hash/: sha_256.py
notebooks/: sha_256.ipynb
output/256/: sha256_256_2025-09-03 15:31:30_0.json  sha256_256_2025-09-03 16:13:19_0.json  sha256_256_2025-09-03 16:13:19_1.json  sha256_256_2025-09-03 16:13:19_2.json  sha256_256_2025-09-03 16:13:19_3.json  sha256_256_2025-09-03 16:13:19_4.json  sha256_256_2025-09-03 16:13:19_5.json  sha256_256_2025-09-03 16:13:19_6.json  sha256_256_2025-09-03 16:13:19_7.json  sha256_256_2025-09-03 16:13:19_8.json  sha256_256_2025-09-03 16:13:19_9.json
output/440/: sha256_440_2025-09-04 12:44:19_0.json  sha256_440_2025-09-04 12:44:19_1.json  sha256_440_2025-09-04 12:44:19_2.json  sha256_440_2025-09-04 12:44:19_3.json  sha256_440_2025-09-04 12:44:19_4.json  sha256_440_2025-09-04 12:44:19_5.json  sha256_440_2025-09-04 12:44:19_6.json  sha256_440_2025-09-04 12:44:19_7.json  sha256_440_2025-09-04 12:44:19_8.json  sha256_440_2025-09-04 12:44:19_9.json
output/json/: sha256_2025-09-03 14:14:40_0.json  sha256_2025-09-03 14:16:23_0.json  sha256_2025-09-03 14:16:48_0.json
output/json/1024/: sha256_1024_2025-09-10 21-22-08_0.json  (+9 more)
src/: diffusion_test.py
src/diffusion_hash_inv/: __init__.py
utils/: file_io.py
(+64 files in other folders)
