[project]
name = "diffusion-hash-inverse"
version = "0.1.0"
requires-python = ">=3.10"
description = "Utilities for random-bit generation, file header I/O, and SHA-256 experiments"
authors = [{ name = "Choi SoonWook" }]
dependencies = ["numpy", "pytest"]
readme = "README.md"

[project.scripts]
diffhash = "diffusion_hash_inverse.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100
